crates/gpui-form-derive/tests/ui/form_path_types_do_not_mix.stderr
error[E0308]: mismatched types
  --> tests/ui/form_path_types_do_not_mix.rs:28:28
   |
28 |     let _: AlphaFormPath = beta;
   |            -------------   ^^^^ expected `AlphaFormPath`, found `BetaFormPath`
   |            |
   |            expected due to this

error[E0308]: mismatched types
  --> tests/ui/form_path_types_do_not_mix.rs:29:22
   |
29 |     let _ = alpha == beta;
   |             -----    ^^^^ expected `AlphaFormPath`, found `BetaFormPath`
   |             |
   |             expected because this is `AlphaFormPath`
